gcc/testsuite/rust/rustc/ui/parser/underscore-suffix-for-float.rs
fn main() {
    let a = 42._; // { dg-error ".E0610." "" { target *-*-* } }
// { dg-error ".E0610." "" { target *-*-* } .-2 }
}

